# Poker

./: .gitignore  CMakeLists.txt  Makefile  README.md
proto/: game_packet.proto
src/: deck.cpp  deck.h  network_manager.cpp  network_manager.h  player.cpp  player.h  table.cpp  table.h  utils.h
src/client/: main_client.cpp  poker_client.cpp  poker_client.h
src/server/: main_server.cpp  poker_server.cpp  poker_server.h
